--- a/app/src/main/res/layout/fragment_courier.xml
+++ b/app/src/main/res/layout/fragment_courier.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.an      droid.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".courier.CourierFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".courier.CourierFragment"
+    android:id="@+id/rlParent"
+    >
 
     <fragment
         android:id="@+id/map"
@@ -12,8 +15,11 @@
         android:layout_height="match_parent" />
 
     <RelativeLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
 
         <ImageView
             android:id="@+id/ivSearchMarker"
@@ -22,7 +28,7 @@
             android:layout_centerInParent="true"
             android:elevation="1dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ic_placeholder"
             android:visibility="invisible" />
 
         <Button
@@ -41,7 +47,33 @@
             android:visibility="invisible" />
 
 
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
 
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:src="@drawable/ic_back"
+
+            />
+
+        <com.mancj.materialsearchbar.MaterialSearchBar
+            app:mt_speechMode="false"
+            app:mt_hint="Search a place"
+            app:mt_maxSuggestionsCount="10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchBar"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_below="@+id/ivBack"
+            app:mt_navIconEnabled="true"
+            android:elevation="1dp"
+
+            app:mt_placeholder="Search a place"/>
 
     </RelativeLayout>
 
