--- a/app/src/main/res/layout/fragment_courier.xml
+++ b/app/src/main/res/layout/fragment_courier.xml
@@ -72,18 +72,11 @@
             android:layout_below="@+id/ivBack"
             app:mt_navIconEnabled="true"
             android:elevation="1dp"
+android:visibility="gone"
 
             app:mt_placeholder="Search a place"/>
 
     </RelativeLayout>
 
-    <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--            android:StopID="@+StopID/fab"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_gravity="bottom|end"-->
-    <!--            android:layout_marginRight="8dp"-->
-    <!--            android:layout_marginBottom="112dp"-->
-    <!--            android:src="@android:drawable/ic_menu_search" />-->
 
 </FrameLayout>
