--- a/app/src/main/res/layout/fragment_courier.xml
+++ b/app/src/main/res/layout/fragment_courier.xml
@@ -60,21 +60,21 @@
 
             />
 
-        <com.mancj.materialsearchbar.MaterialSearchBar
-            app:mt_speechMode="false"
-            app:mt_hint="Search a place"
-            app:mt_maxSuggestionsCount="10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/searchBar"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_below="@+id/ivBack"
-            app:mt_navIconEnabled="true"
-            android:elevation="1dp"
-android:visibility="gone"
+<!--        <com.mancj.materialsearchbar.MaterialSearchBar-->
+<!--            app:mt_speechMode="false"-->
+<!--            app:mt_hint="Search a place"-->
+<!--            app:mt_maxSuggestionsCount="10"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/searchBar"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            android:layout_marginEnd="16dp"-->
+<!--            android:layout_below="@+id/ivBack"-->
+<!--            app:mt_navIconEnabled="true"-->
+<!--            android:elevation="1dp"-->
+<!--android:visibility="gone"-->
 
-            app:mt_placeholder="Search a place"/>
+<!--            app:mt_placeholder="Search a place"/>-->
 
     </RelativeLayout>
 
