--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -15,5 +15,6 @@
         android:id="@+id/action_filter"
         app:showAsAction="always"
         android:icon="@drawable/ic_menu_white_24dp"
-        android:title="@string/filter" />
+        android:title="@string/filter"
+        />
 </menu>
