--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,9 +7,11 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusableInTouchMode="true"
+    android:fitsSystemWindows="true"
     tools:context=".login.LoginActivity">
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -28,7 +30,7 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/etPassword"
+                android:layout_below="@+id/etPasswordLayout"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="80dp"
                 android:layout_marginEnd="24dp"
@@ -37,37 +39,47 @@
                 android:textColor="@color/colorSecondary" />
 
 
-            <EditText
-                android:id="@+id/etPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/etUsername"
-                android:layout_gravity="start"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="24dp"
-                android:hint="@string/password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:selectAllOnFocus="true"
-                android:textAlignment="viewStart" />
-
-            <EditText
-                android:id="@+id/etUsername"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/etUsernameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvWelcome"
-                android:layout_gravity="start"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="24dp"
-                android:hint="@string/user_name_email"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:selectAllOnFocus="true"
-                android:textAlignment="viewStart" />
+                android:layout_marginBottom="10dp"
+                app:passwordToggleEnabled="true">
 
+                <EditText
+                    android:id="@+id/etUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/user_name_email"
+                    android:imeOptions="actionNext"
+                    android:selectAllOnFocus="true"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/etPasswordLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/etUsernameLayout"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="10dp"
+                app:passwordToggleEnabled="true">
+
+                <EditText
+                    android:id="@+id/etPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:selectAllOnFocus="true" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
             <TextView
