--- a/app/src/main/res/layout/fragment_courier.xml
+++ b/app/src/main/res/layout/fragment_courier.xml
@@ -60,21 +60,52 @@
 
             />
 
-<!--        <com.mancj.materialsearchbar.MaterialSearchBar-->
-<!--            app:mt_speechMode="false"-->
-<!--            app:mt_hint="Search a place"-->
-<!--            app:mt_maxSuggestionsCount="10"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:id="@+id/searchBar"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            android:layout_below="@+id/ivBack"-->
-<!--            app:mt_navIconEnabled="true"-->
-<!--            android:elevation="1dp"-->
-<!--android:visibility="gone"-->
+        <RelativeLayout
+            android:id="@+id/rlBottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="50dp"
+            android:elevation="1dp"
+            android:background="@color/white"
+            android:visibility="gone"
+            >
 
-<!--            app:mt_placeholder="Search a place"/>-->
+            <TextView
+                android:id="@+id/tvExpectedTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="2dp"
+                android:text=""
+                android:textColor="@color/primary"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvExpectedDistance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/tvExpectedTime"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="2dp"
+                android:text="@string/minutes"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+            <TextView
+                android:id="@+id/tvDetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="20dp"
+                android:layout_below="@+id/tvExpectedTime"
+                android:layout_marginStart="20dp"
+                android:text="@string/fastest_route"
+                android:textColor="@color/textColor"
+                android:textSize="16sp"
+                />
+
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
