--- a/app/src/main/res/layout/fragment_courier.xml
+++ b/app/src/main/res/layout/fragment_courier.xml
@@ -29,7 +29,7 @@
             android:elevation="1dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_placeholder"
-            android:visibility="invisible" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/btnConfirmLocation"
@@ -53,12 +53,25 @@
             android:layout_height="24dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
-
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:src="@drawable/ic_back"
-
+android:visibility="invisible"
             />
+        <com.mancj.materialsearchbar.MaterialSearchBar
+            app:mt_speechMode="false"
+            app:mt_hint="Search a place"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchBar"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+       android:layout_marginTop="20dp"
+            app:mt_navIconEnabled="true"
+            android:elevation="1dp"
+            android:outlineProvider="bounds"
+            app:mt_maxSuggestionsCount="20"
+            app:mt_placeholder="Search a place"/>
 
         <RelativeLayout
             android:id="@+id/rlBottom"
