--- a/app/src/main/res/layout/ticket_layout.xml
+++ b/app/src/main/res/layout/ticket_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,7 +24,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/placeholder" />
+            android:src="@drawable/placeholder"
+            android:visibility="gone" />
 
 
         <TextView
@@ -69,25 +71,41 @@
             android:maxLines="1"
             android:text="@string/no_details_available"
             android:textColor="@color/colorWelcome"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvAgentName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvTicketName"
+            android:layout_alignStart="@+id/tvTicketName"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="1"
+            android:textColor="@color/colorPrimary"
+            android:textSize="13sp"
+            tools:text="Agent Name" />
 
         <TextView
             android:id="@+id/tvPriority"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTicketDescription"
-            android:layout_alignStart="@+id/tvTicketDescription"
+            android:layout_below="@+id/tvAgentName"
+            android:layout_alignStart="@+id/tvAgentName"
             android:layout_marginTop="4dp"
             android:text="@string/priority"
             android:textColor="@color/colorWelcome"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvPriority"
-            android:layout_alignStart="@+id/tvTicketDescription"
+            android:layout_below="@+id/tvAgentName"
+            android:layout_alignStart="@+id/tvAgentName"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
             android:text="@string/le"
@@ -101,9 +119,10 @@
             android:layout_below="@+id/tvPrice"
             android:layout_alignBaseline="@+id/tvPrice"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-
+            android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_textview"
             android:clickable="true"
             android:fontFamily="Poppins-Medium"
