--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -142,7 +142,9 @@
                         android:gravity="center|left"
                         android:imeOptions="actionNext"
                         android:inputType="none"
-                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:maxLength="50"
                         android:text="@string/select_ticket"
                         android:textColor="@color/colorLabel"
                         android:textSize="15sp" />
