--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,29 +6,19 @@
 
         <item
             android:id="@+id/navTickets"
-            android:icon="@drawable/ic_assignment_black_24dp"
+            android:icon="@drawable/ic_assignment"
             android:title="@string/tickets" />
 
         <item
             android:id="@+id/navCall"
-            android:icon="@drawable/ic_call_black_24dp"
+            android:icon="@drawable/ic_call"
             android:title="@string/call_courier" />
 
-        <item
-            android:id="@+id/navCompletedTasks"
-            android:icon="@drawable/ic_event_available_black_24dp"
-            android:title="@string/completed_tasks"
-            android:visible="false"/>
 
-        <item
-            android:id="@+id/navWallet"
-            android:icon="@drawable/ic_work_black_24dp"
-            android:title="@string/wallet"
-            android:visible="false"/>
         
         <item
             android:id="@+id/navLogout"
-            android:icon="@drawable/ic_power_settings_new_black_24dp"
+            android:icon="@drawable/ic_power"
             android:title="@string/log_out" />
     </group>
 </menu>
