--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,7 +14,7 @@
     <item
         android:id="@+id/action_filter"
         app:showAsAction="always"
-        android:icon="@drawable/ic_menu_white_24dp"
+        android:icon="@drawable/ic_filter"
         android:title="@string/filter"
         />
 </menu>
