--- a/app/src/main/res/layout/service_cost_layout.xml
+++ b/app/src/main/res/layout/service_cost_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -33,14 +34,15 @@
             android:id="@+id/tvServiceCostName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="20dp"
             android:layout_toEndOf="@+id/ivProductImage"
+            android:maxLines="2"
             android:ellipsize="end"
+            android:singleLine="false"
             android:gravity="left|start"
-            android:maxLength="14"
-            android:maxLines="1"
-            android:text="Service Cost"
+            tools:text="012345678901234567892123547896541"
             android:textColor="@color/colorApp"
             android:textSize="13sp" />
 
@@ -50,9 +52,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvServiceCostName"
             android:layout_alignStart="@+id/tvServiceCostName"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:text="0LE"
-            android:textColor="@color/colorWelcome"
+            android:textColor="@color/colorPrimary"
             android:textSize="13sp" />
 
 
@@ -72,7 +74,8 @@
             android:text="@string/delete"
             android:textColor="@color/red"
             android:textSize="13sp"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold|italic"
+            android:visibility="gone"/>
     </RelativeLayout>
 
 
