--- a/app/src/main/res/layout/ticket_layout.xml
+++ b/app/src/main/res/layout/ticket_layout.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="40dp"
             android:layout_toEndOf="@+id/ivProductImage"
             android:ellipsize="end"
@@ -50,7 +50,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvTicketName"
             android:layout_alignStart="@+id/tvTicketName"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="7dp"
             android:ellipsize="end"
             android:gravity="start"
             android:maxLines="1"
@@ -101,28 +101,42 @@
             android:visibility="gone" />
 
         <TextView
-            android:id="@+id/tvPrice"
+            android:id="@+id/tvComingTaskCourierName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvAgentName"
             android:layout_alignStart="@+id/tvAgentName"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:text="@string/le"
-            android:textColor="@color/colorWelcome"
-            android:textSize="13sp" />
+            android:layout_marginTop="7dp"
+            android:textColor="@color/green"
+            android:textSize="13sp"
+            tools:text="Courier Name" />
+
+        <TextView
+            android:id="@+id/tvComingTaskPickupTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvComingTaskCourierName"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="40dp"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="1"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            tools:text="3-5-2020" />
 
         <TextView
             android:id="@+id/tvTotalTasks"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_below="@+id/tvPrice"
-            android:layout_alignBaseline="@+id/tvPrice"
+            android:layout_below="@+id/tvComingTaskPickupTime"
+            android:layout_alignBaseline="@+id/tvComingTaskPickupTime"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_textview"
             android:clickable="true"
             android:fontFamily="Poppins-Medium"
